--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile.png"
+              src="./assets/profilepicmike.jpg"
               alt="Profile Image"
               width="450"
               height="350"
@@ -135,16 +135,17 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              As a coding enthusiast with a passion for philosophical inquiry and a knack for storytelling, 
+              I bring a unique blend of technical expertise and creative flair to the table. With a mind for logic 
+              and a love for language, I craft code that's both elegant and efficient, and write words that inspire 
+              and educate.
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              With a curious mind and a passion for innovation, I'm a creative problem-solver who thrives at the 
+              intersection of technology, philosophy, and storytelling. I'm always seeking new opportunities to learn, grow, 
+              and connect with others who share my enthusiasm for exploring the possibilities of code, language, and human 
+              experience. When I'm not coding or writing, you can find me exploring new ideas, practicing mindfulness, or 
+              engaging in meaningful conversations that inspire and challenge my perspectives.
             </p>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
@@ -347,13 +348,8 @@ Have fun creating your portfolio on this template!!! -->
         </div>
         <hr />
         <p class="footer__text">
-          &copy; <span id="year"></span> - Template by
-          <a
-            href="https://github.com/AnilSeervi"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Anil Seervi</a
-          >. <br />Made with &hearts;
+          &copy; <span id="year"></span> -   
+          Robie Design
         </p>
       </div>
     </footer>
