projects updated picture

--- a/index.html
+++ b/index.html
@@ -165,12 +165,11 @@ Have fun creating your portfolio on this template!!! -->
           <!-- Each .row is a project -->
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">CS50 Python</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                I'm currently learning Python through Harvard's CS50P course, and Scientific 
+                Computing with Python offered by Freecodecamp. This is a collection of my notes 
+                in Python code from these courses.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
@@ -180,7 +179,7 @@ Have fun creating your portfolio on this template!!! -->
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/mikerobie/CS50P" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
@@ -190,7 +189,7 @@ Have fun creating your portfolio on this template!!! -->
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="assets\pythonscreen.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
