--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profilepicmike.jpg"
+              src="./assets/profilepicmike.jpeg"
               alt="Profile Image"
-              width="450"
-              height="350"
+              width="256"
+              height="450"
             />
           </div>
           <div class="about-wrapper__info">
