--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ Have fun creating your portfolio on this template!!! -->
               class="img-fluid"
               src="./assets/profilepicmike.jpeg"
               alt="Profile Image"
-              width="256"
-              height="450"
+              width="75%"
+              height="90%"
             />
           </div>
           <div class="about-wrapper__info">
