--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@ Have fun creating your portfolio on this template!!! -->
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a href="#" class="cta-btn cta-btn--resume">Call to Action</a>
+          <p class="contact-wrapper__text">Let's connect</p>
+          <a href="#" class="cta-btn cta-btn--resume">Send a note to mdrobie@gmail.com</a>
         </div>
       </div>
     </section>
