--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://mikerobie.github.io/freecodecampform"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
