--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@ Have fun creating your portfolio on this template!!! -->
                   >See Live</a
                 >
                 <a href="https://github.com/mikerobie/CS50P" target="_blank" class="cta-btn text-color-main"
-                  >Source Code</a
-                >
+                  >Source Code</a>
               </div>
             </div>
 
@@ -213,13 +212,12 @@ Have fun creating your portfolio on this template!!! -->
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="https://mikerobie.github.io/freecodecampform"
-                  target="_blank"
+                  href="https://mikerobie.github.io/freecodecampform" target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="https://mikerobie.github.io/freecodecampform/" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/mikerobie/freecodecampform" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
@@ -229,7 +227,7 @@ Have fun creating your portfolio on this template!!! -->
               <a href="#" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/formpic.jpg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
